...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        backgroundColor: Colors.red[300],
        title: const Text(
          'Linked Accounts',
          style: TextStyle(
            fontFamily: 'Poppins',
          ),
        ),
        centerTitle: true,
        elevation: 0,
        bottom: TabBar(
          controller: _tabController,
          indicator: BoxDecoration(
            color: Colors.red[200],
          ),
          tabs: const [
            CustomTabsUI(text: 'Friends', icon: Icons.people),
            CustomTabsUI(text: 'Friend Requests', icon: Icons.notifications),
          ],
        ),
      ),
      body: TabBarView(
        controller: _tabController,
        children: [
...
          showDialog(
            context: context,
            builder: (BuildContext context) {
              final formKey = GlobalKey<FormState>();
              final TextEditingController username = TextEditingController();
              return AlertDialog(
                title: const Text('Send Friend Request'),
                content: Form(
                  key: formKey,
                  child: TextFormField(
                    controller: username,
                    decoration: const InputDecoration(
                      hintText: 'Enter Username',
...

                  //Cancel Button
                  TextButton(
                    onPressed: () {
                      Navigator.of(context).pop(); // Close the dialog
                    },
                    child: const Text('Cancel'),
                  ),
                ],
              );
            },
          );
        },
...
        stream: _fireStoreService.getUserDocSnapshot(),
        builder: (context, snapshot) {
          if (snapshot.hasData) {
            final userDoc = snapshot.data!;
            final friendList = userDoc.data()?['friendlist'] as List<dynamic>;
            return ListView.builder(
              key: const Key('friendList'),
              itemCount: friendList.length,
              itemBuilder: (context, index) {
                final friendName = friendList[index].toString();
                return FutureBuilder<String?>(
                  future: _fireStoreService.getFriendImageUrl(friendName),
                  builder: (context, snapshot) {
...
    return StreamBuilder<QuerySnapshot>(
      stream: _fireStoreService.getFriendRequests(),
      builder: (context, snapshot) {
        if (snapshot.hasData) {
          final friendRequestDocs = snapshot.data!.docs;
          return ListView.builder(
            key: const Key('friendRequestList'),
            itemCount: friendRequestDocs.length,
            itemBuilder: (context, index) {
              // Getting the senderName out of every document.
              final friendRequestDoc = friendRequestDocs[index];
              final friendRequestData = friendRequestDoc.data() as Map<String, dynamic>;
              final friendRequestSenderName = friendRequestData['senderName'];
...
