...
                                  : 'No common allergen found!'),
                              actions: [
                                TextButton(
                                  onPressed: () {
                                    Navigator.of(context).pop();
                                  },
                                  child: const Text('OK'),
                                ),
                                TextButton(
                                  onPressed: () async {
                                    // Add every string in the commonElements array
                                    // to the allergen list for the corresponding user doc in firebase.
                                    await _fireStoreService.saveToUserAllergen(commonElements);
...
